<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/employerPostJob"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.employer.Dashboard_Employer_PostJob">

    <!-- Header -->
    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/quick_cash_employer_post_job"
        android:textSize="28sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:background="#3E2F78"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Navigation buttons -->
    <LinearLayout
        android:id="@+id/navigationButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="#D4CAEC"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Your Jobs button -->
        <Button
            android:id="@+id/yourJobsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/employer_postJobs_your_jobs" />

        <!-- Post a Job button -->
        <Button
            android:id="@+id/postJobButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/employer_postJobs_post_a_job" />

        <!-- Help and Support button -->
        <Button
            android:id="@+id/helpSupportButton"
            android:layout_width="17dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/employer_postJobs_help_and_support" />

        <!-- Your Profile button -->
        <Button
            android:id="@+id/yourProfileButton"
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/employer_postJobs_your_profile_employer" />
    </LinearLayout>

    <!-- EditTexts for Date, Expected Duration, Urgency, Salary, and Job Location -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/navigationButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/editTextJobTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job_title"
            android:textSize="18sp"
            android:padding="16dp"/>
        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:textSize="18sp"
            android:padding="16dp"/>

        <EditText
            android:id="@+id/editTextExpectedDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expected_duration"
            android:textSize="18sp"
            android:padding="16dp"
            android:inputType="number"
            android:imeOptions="actionDone"/>

        <EditText
            android:id="@+id/editTextUrgency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/urgency"
            android:textSize="18sp"
            android:padding="16dp"/>

        <EditText
            android:id="@+id/editTextSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/salary"
            android:textSize="18sp"
            android:padding="16dp"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"/>

        <EditText
            android:id="@+id/editTextJobLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job_location"
            android:textSize="18sp"
            android:padding="16dp"/>

    </LinearLayout>

    <!-- Button to send job to database -->
    <Button
        android:id="@+id/sendToDatabaseButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/upload_job"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
